# hx3dit

./: .gitignore  CMakeLists.txt  test_file
source/: editor.cpp  editor.hpp  hx3dit.cpp  hx3dit.hpp  input.cpp  input.hpp  output.cpp  output.hpp
